PROJECT(geobject)
CMAKE_MINIMUM_REQUIRED(VERSION 3.18.0)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/third_party/GDAL_linux/include/gdal)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/third_party/opencv/build/include/opencv2)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/third_party/pybind11/include/pybind11)

LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/third_party/GDAL_linux/lib)
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/third_party/opencv/build/lib)

FIND_PACKAGE(OpenCV REQUIRED)

# Find PythonLibs
FIND_PACKAGE(PythonLibs REQUIRED)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})

FILE(GLOB HED_FILES ${CMAKE_SOURCE_DIR}/include/*.h*)
FILE(GLOB SRC_FILES ${CMAKE_SOURCE_DIR}/src/*.c*)

pybind11_add_module(${PROJECT_NAME} ${HED_FILES} ${SRC_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} gdal ${OpenCV_LIBS} ${PYTHON_LIBRARIES})